logs/validate.20260408-005804.log
Mode: isolate
<<<<<<< HEAD
Isolate: including Chap18 Chap02
error: unexpected token, expected `;`
    --> src/Chap18/ArraySeqMtEph.rs:1303:25
     |
1303 |                         by {
     |                         ^^

error[E0425]: cannot find type `ArraySeqMtEphIter` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:1998:34
     |
1998 |     impl<'a, T: Debug> Debug for ArraySeqMtEphIter<'a, T> {
     |                                  ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphIter` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2004:29
     |
2004 |     impl<'a, T> Display for ArraySeqMtEphIter<'a, T> {
     |                             ^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphGhostIterator` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2010:27
     |
2010 |     impl<'a, T> Debug for ArraySeqMtEphGhostIterator<'a, T> {
     |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphGhostIterator` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2016:29
     |
2016 |     impl<'a, T> Display for ArraySeqMtEphGhostIterator<'a, T> {
     |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphS` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2025:30
     |
2025 |     impl<T: Debug> Debug for ArraySeqMtEphS<T> {
     |                              ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphS` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2032:34
     |
2032 |     impl<T: Display> Display for ArraySeqMtEphS<T> {
     |                                  ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphInv` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2045:23
     |
2045 |     impl<T> Debug for ArraySeqMtEphInv<T> {
     |                       ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `ArraySeqMtEphInv` in this scope
    --> src/Chap18/ArraySeqMtEph.rs:2051:25
     |
2051 |     impl<T> Display for ArraySeqMtEphInv<T> {
     |                         ^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0425`.
Elapsed: 1s
Sampled Memory Usage: peak rust_verify RSS: 0MB, peak z3 RSS: 0MB, min free: 22990MB
Sampled CPU Usage: rust_verify: 0s, z3 children: 0s
=======
Isolate: including Chap37 Chap18 Chap19 Chap23 Chap02
error[E0004]: non-exhaustive patterns: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
   --> src/Chap37/BSTAVLMtEph.rs:547:43
    |
547 | ...                   match tg.left {
    |                             ^^^^^^^ pattern `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf` not covered
    |
note: `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>` defined here
   --> src/Chap23/BalBinTreeStEph.rs:65:14
    |
 65 |     pub enum BalBinTree<T> {
    |              ^^^^^^^^^^
 66 |         Leaf,
    |         ---- not covered
    = note: the matched value is of type `Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree<T>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
    |
566 ~                                         },
567 ~                                         Chap23::BalBinTreeStEph::BalBinTreeStEph::BalBinTree::Leaf => todo!(),
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
Elapsed: 13s
Sampled Memory Usage: peak rust_verify RSS: 8313MB, peak z3 RSS: 913MB, min free: 17200MB
Sampled CPU Usage: rust_verify: 117s, z3 children: 72s
>>>>>>> agent4/ready
